--- a/.github/actions/setup-node-dependencies/action.yml
+++ b/.github/actions/setup-node-dependencies/action.yml
@@ -1,12 +1,10 @@
 name: 'Setup'
 description: 'Setup Node.js, install dependencies, and create .env file with caching'
-
 inputs:
   create-env:
     description: 'Whether to create .env file from environment variables'
     required: false
     default: 'true'
-
 outputs:
   env-cache-hit:
     description: 'Whether the .env file was restored from cache'
@@ -14,17 +12,14 @@ outputs:
   deps-cache-hit:
     description: 'Whether the dependencies were restored from cache'
     value: ${{ steps.setup-node.outputs.cache-hit }}
-
 runs:
   using: 'composite'
   steps:
-    - name: 🔧 Setup Node.js 20.x w/ Cache
-      id: setup-node
+    - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
         cache: 'npm'
-
     - name: Generate .env cache key
       if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != ''
       id: env-cache-key
@@ -34,7 +29,6 @@ runs:
         echo "config-hash=${CONFIG_HASH}" >> $GITHUB_OUTPUT
         echo "Generated .env cache key: ${CONFIG_HASH}"
       shell: bash
-
     - name: Restore .env cache
       if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != ''
       id: cache-env
@@ -44,7 +38,6 @@ runs:
         key: ${{ runner.os }}-env-file-${{ steps.env-cache-key.outputs.config-hash }}
         restore-keys: |
           ${{ runner.os }}-env-file-
-
     - name: Create .env file (if needed and cache miss)
       if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != '' && steps.cache-env.outputs.cache-hit != 'true'
       run: |
@@ -55,7 +48,6 @@ runs:
         DB_USER=${DB_USER}
         DB_PASSWORD=${DB_PASSWORD}
         DB_NAME=${DB_NAME}
-
         # Application Configuration
         PORT=${APP_PORT}
         NODE_ENV=${NODE_ENV}
@@ -64,24 +56,20 @@ runs:
         echo "• NODE_ENV: ${NODE_ENV}"
         echo "• Configuration loaded securely"
       shell: bash
-
     - name: Install dependencies (if cache miss)
       if: steps.setup-node.outputs.cache-hit != 'true'
       run: npm ci
       shell: bash
-
     - name: Setup complete
       run: |
         echo "Setup Summary:"
         echo ""
-
         # Dependencies status
         if [[ "${{ steps.setup-node.outputs.cache-hit }}" == "true" ]]; then
           echo "Dependencies: Restored from cache"
         else
           echo "Dependencies: Installed and cached"
         fi
-
         # Environment file status
         if [[ "${{ inputs.create-env }}" == "true" ]]; then
           if [[ "${{ env.DB_PORT }}" != "" && "${{ env.DB_USER }}" != "" ]]; then
@@ -96,7 +84,6 @@ runs:
         else
           echo ".env file: Skipped (create-env=false)"
         fi
-
         echo ""
         echo "Node.js version: $(node --version)"
         echo "npm version: $(npm --version)"
